fixing footer h3 align

--- a/unidad-1/rubrica/style.css
+++ b/unidad-1/rubrica/style.css
@@ -548,6 +548,7 @@ footer .footer-copyright {
         font-size: 18px;
         font-weight: 700;
         color: #F5F5F5;
+        text-align: center;
     }
     
     footer .footer-links div p {
